JSON.g4
grammar JSON;

json : value ;

obj : '{' pair (',' pair)* '}'
    | '{' '}'
    ;

pair : STRING ':' value ;

arr : '[' value (',' value)* ']'
    | '[' ']'
    ;

value : STRING
      | NUMBER
      | obj
      | arr
      | 'true'
      | 'false'
      | 'null'
      ;

STRING : '"' (ESC | ~["\\])* '"' ;

fragment ESC : '\\' (["\\/bfnrt] | UNICODE) ;
fragment UNICODE : 'u' HEX HEX HEX HEX ;
fragment HEX : [0-9a-fA-F] ;

NUMBER : '-'? INT ('.' [0-9]+)? EXP? ;

fragment INT : '0' | [1-9] [0-9]* ;
fragment EXP : [Ee] [+\-]? [0-9]+ ;

WS : [ \t\n\r]+ -> skip ;
